gap fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4677,19 +4677,13 @@ img::selection {
   background: white;
   position: relative;
   z-index: 2;
-  padding: 10rem 0rem;
+  padding: 10rem 0rem 0rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-@media screen and (min-width: 61.9375rem) {
-  .stechaesthetics {
-    min-height: 100vh;
-  }
 }
 
 @media screen and (max-width: 61.9375rem) {
